# multimedia-playback

./: README.md
client/: CMakeLists.txt  README.md  client.c
lib/: channel.c  channel.h  multicast.h  thr_list.c  thr_list.h  token.c  token.h
media/ch1/: desc.txt
media/ch2/: desc.txt
media/ch3/: desc.txt
server/: CMakeLists.txt  channel.c  channel.h  server.c  server.h  thr_channel.c  thr_channel.h  thr_list.c  thr_list.h  token.c  token.h
